fixed footer alignment issue, and added like color

--- a/src/VideoFooter.css
+++ b/src/VideoFooter.css
@@ -22,6 +22,11 @@
     position: absolute;
 }
 
+.videoFooter__ticker {
+    display: flex;
+    align-items: center;
+}
+
 .videoFooter__ticker > .ticker {
     height: fit-content;
     margin-left: 30px;
